[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netqmpi"
version = "0.1.0"
description = "A high-level abstraction layer similar to MPI for distributed quantum programming over NetQASM."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "F. Javier Cardama", email = "javier.cardama@usc.es"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "netqasm~=1.0.0",
    "numpy~=1.24.3",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
netqmpi = "netqmpi.runtime.cli:main"

[project.urls]
Homepage = "https://github.com/NetQIR/net-qmpi"
Repository = "https://github.com/NetQIR/net-qmpi"

[tool.setuptools.packages.find]
where = ["."]
include = ["netqmpi*"]
exclude = ["test*"]
